# streamlit-state-model

./: .gitignore  LICENSE  README.md  dev_environment.yml  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
demo_app/: Favorites.py
demo_app/models/: session.py
demo_app/pages/: 1_🍽️_Food.py  2_🎨_Color.py  3_🔢_Number.py
docs/: development.md
src/streamlit_state_model/: __init__.py  default_factory.py  state_model.py
tests/: test_demo_app.py
