[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit.buildapi"

[project]
name = "streamlit-state-model"
version = "0.2.1"
description = "A package that provides a StateModel for Streamlit applications, allowing easy management of session state through class attributes."
authors = [
    { name="Trenton Smith", email="trenton@databutsmart.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["streamlit", "state", "model", "session_state"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/trenton-ftw/streamlit-state-model"
"Documentation" = "https://github.com/trenton-ftw/streamlit-state-model#readme"
"Source" = "https://github.com/trenton-ftw/streamlit-state-model"
"Tracker" = "https://github.com/trenton-ftw/streamlit-state-model/issues"

[tool.flit.module]
name = "streamlit_state_model"

[tool.pytest.ini_options]
pythonpath = ["src","demo_app"]
